JDGR11-41 added delete functionality